# transpanea

./: Cargo.toml  LICENSE  README.md  build.rs  platform.rs
.github/workflows/: ci.yml
src/: app_tray_icon.rs  main.rs
src/platform/: macos.rs  windows.rs
